SONAR-9014 Prevent groups synchronization to remove 'sonar-users' membership